--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,10 @@
+*{
+  box-sizing: border-box;
+}
+body,html{
+  width: 100%;
+  min-height: 100vh;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
